--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="STYLE9"> 
   <table width="980" border="0" bordercolor="#FFFFFF">
     <tbody><tr>
-      <td width="336" rowspan="3"><img src="./index_files/wen.jpg" alt="wen" width="281" height="287"></td>
+      <td width="336" rowspan="3"><img src="wen.jpg" alt="wen" width="281" height="287"></td>
       <td height="235" colspan="4"><p><span class="STYLE4">Wen Xia</span><span class="STYLE8">,</span> <span class="STYLE7">Ph.D., </span>Associate Professor </p>                
         <p><a href="http://cs.hitsz.edu.cn">School of Computer Science and Technology</a><br>
           <a href="http://www.hitsz.edu.cn/index.html">Harbin Institute of Technology, Shenzhen         </a></p>
