--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <td width="71" rowspan="3">&nbsp;</td>
     </tr>
     <tr>
-      <td width="120" height="34"><a href="http://wxia.hustbackup.cn/#SelectedPublications" class="STYLE14">Publications</a><a href="http://wxia.hustbackup.cn/" class="STYLE14"></a></td>
-      <td width="98"><a href="http://stlab.wnlo.hust.edu.cn/wxia/#SelectedPublications" class="STYLE14"></a> <a href="http://wxia.hustbackup.cn/#Teaching" class="STYLE14">Teaching</a></td>
-      <td width="87"><a href="http://wxia.hustbackup.cn/#Grants" class="STYLE14">Grants</a><a href="http://stlab.wnlo.hust.edu.cn/wxia/#Teaching" class="STYLE14"></a></td>
-      <td width="242"><a href="http://wxia.hustbackup.cn/#Awards" class="STYLE14">Awards</a></td>
+      <td width="120" height="34"><a href="https://cswxia.github.io/#SelectedPublications" class="STYLE14">Publications</a><a href="https://cswxia.github.io/" class="STYLE14"></a></td>
+      <td width="98"><a href="https://cswxia.github.io/wxia/#SelectedPublications" class="STYLE14"></a> <a href=https://cswxia.github.io//#Teaching" class="STYLE14">Teaching</a></td>
+      <td width="87"><a href="https://cswxia.github.io//#Grants" class="STYLE14">Grants</a><a href="https://cswxia.github.io//#Teaching" class="STYLE14"></a></td>
+      <td width="242"><a href="https://cswxia.github.io//#Awards" class="STYLE14">Awards</a></td>
     </tr>
     <tr>
       <td colspan="4" bordercolor="#000000">
