--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </tr>
     <tr>
       <td width="120" height="34"><a href="https://cswxia.github.io/#SelectedPublications" class="STYLE14">Publications</a><a href="https://cswxia.github.io/" class="STYLE14"></a></td>
-      <td width="98"><a href="https://cswxia.github.io/wxia/#SelectedPublications" class="STYLE14"></a> <a href=https://cswxia.github.io//#Teaching" class="STYLE14">Teaching</a></td>
-      <td width="87"><a href="https://cswxia.github.io//#Grants" class="STYLE14">Grants</a><a href="https://cswxia.github.io//#Teaching" class="STYLE14"></a></td>
-      <td width="242"><a href="https://cswxia.github.io//#Awards" class="STYLE14">Awards</a></td>
+      <td width="98"><a href="https://cswxia.github.io/#SelectedPublications" class="STYLE14"></a> <a href=https://cswxia.github.io/#Teaching" class="STYLE14">Teaching</a></td>
+      <td width="87"><a href="https://cswxia.github.io/#Grants" class="STYLE14">Grants</a><a href="https://cswxia.github.io//#Teaching" class="STYLE14"></a></td>
+      <td width="242"><a href="https://cswxia.github.io/#Awards" class="STYLE14">Awards</a></td>
     </tr>
     <tr>
       <td colspan="4" bordercolor="#000000">
