--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="STYLE9"> 
   <table width="980" border="0" bordercolor="#FFFFFF">
     <tbody><tr>
-      <td width="336" rowspan="3"><img src="wen.jpg" alt="wen" width="281" height="287"></td>
+      <td width="336" rowspan="3"><img src="xiawen-2020.png" alt="wen" width="281" height="287"></td>
       <td height="235" colspan="4"><p><span class="STYLE4">Wen Xia</span><span class="STYLE8">,</span> <span class="STYLE7">Ph.D., </span>Associate Professor </p>                
         <p><a href="http://cs.hitsz.edu.cn">School of Computer Science and Technology</a><br>
           <a href="http://www.hitsz.edu.cn/index.html">Harbin Institute of Technology, Shenzhen         </a></p>
@@ -53,6 +53,7 @@
   conferences  including Proceedings of the IEEE (PIEEE), IEEE Transactions on Computers (TC),  IEEE Transactions on Parallel and Distributed Systems (TPDS), USENIX ATC,  FAST,  INFOCOM,  MSST,  Performance, IPDPS, HotStorage, etc. He is a member of ACM, CCF,  IEEE, and USENIX.</p>
   <p class="STYLE11">Selected Publications<a name="SelectedPublications" id="SelectedPublications"></a> (<a href="https://scholar.google.com.hk/citations?user=TRmOudAAAAAJ&amp;hl=zh-CN&amp;oi=sra">Google Scholar</a>, <a href="http://dblp.uni-trier.de/pers/hd/x/Xia:Wen">DBLP</a>):</p>
   <ol>
+    <li>Xiangyu Zou, Jingsong Yuan, Philip Shilane, <strong>Wen Xia</strong>, Haijun Zhang, and Xuan Wang, &quot;<a href="https://cswxia.github.io/">The Dilemma between Deduplication and Locality: Can Both be Achieved?</a>&quot;, Proceedings of the 19th USENIX Conference on File and Storage Technologies (<strong>FAST'21</strong>), Santa Clara, CA, USA, Feb. 2021. (Acceptance rate:  21.5%)</li>
     <li>Qiuping Wang, Jinhong Li, <strong>Wen Xia</strong>, Erik Kruus, Biplob Debnath, and Patrick P. C. Lee., &quot;<a href="https://cswxia.github.io/">Austere Flash Caching with Deduplication and Compression</a>&quot;, Proceedings of the 2020 USENIX Annual Technical Conference (<strong>USENIX ATC'20</strong>), Boston, MA, USA, July 2020. (Acceptance rate: 18.6%)</li>
    <li>Lingfeng Xiang, Yuan He, <strong>Wen Xia</strong>, Hong Jiang, Zhenhua Li, Xuan Wang, and Xiangyu Zou. &quot;<a href="https://cswxia.github.io/">Dsync: a Lightweight Delta Synchronization Approach for Cloud Storage Services</a>&quot;, Proceedings of the 36th International Conference on Massive Storage Systems and Technology (<strong>MSST'20</strong>), Santa Clara, CA, USA, Oct. 2020.</li>
 <li>Yucheng Zhang, <strong>Wen Xia</strong>, Dan Feng, Hong Jiang, Yu Hua, Qiang Wang, &quot;<a href="https://cswxia.github.io/">Finesse: Fine-Grained Feature Locality based Fast Resemblance Detection for Post-Deduplication Delta Compression</a>&quot;, Proceedings of the 17th USENIX Conference on File and Storage Technologies (<strong>FAST'19</strong>), BOSTON, MA, USA, Feb. 2019. (Acceptance rate: 18%)</li>
