--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
     <li><strong>Wen Xia</strong>, Hong Jiang, Dan Feng, Fred Douglis, Philip Shilane, Yu Hua, Min Fu, Yucheng Zhang, and Yukun Zhou, &quot;<a href="survey-final-2016.pdf">A Comprehensive Study of the Past, Present, and Future of Data Deduplication</a>, &quot; in Proceedings of the IEEE (<strong>PIEEE</strong>), Vol. 104, No. 9, Sep. 2016, pages: 1681-1710.</li>
     <li><strong>Wen Xia</strong>, Yukun Zhou, Hong Jiang, Dan Feng, Yu Hua, Yuchong Hu, Yucheng Zhang, Qing Liu, "<a href="https://www.usenix.org/system/files/conference/atc16/atc16-paper-xia.pdf">FastCDC: a Fast and Efficient Content-Defined Chunking Approach for Data Deduplication</a>",<strong>&nbsp;</strong> in Proceedings of USENIX Annual Technical Conference (<strong>USENIX ATC'16</strong>), Denver, CO, USA, June &nbsp;22–24, 2016, pages: 101-114. (Acceptance rate:18%, used by <a href="https://github.com/coblo">Content Blockchain Project</a>, and the chunking source code is <a href="https://github.com/coblo/pyiscclib/blob/master/src/iscclib/chunker.py">here</a>)</li>
     <li><strong>Wen Xia</strong>, Hong Jiang, Dan Feng, and Lei Tian, "<em><a href="pub/DARE-IEEE-Final-2016.pdf">DARE: A Deduplication-Aware Resemblance Detection and Elimination Scheme for Data Reduction with Low Overheads</a></em>",  IEEE Transactions on Computers (<strong>TC</strong>), Vol.65, No.6, June  2016, pages: 1692 - 1705. </li>
-    <li>Fangting Huang, Dan Feng, <strong>Wen Xia</strong>, Wen Zhou, Yucheng Zhang, Min Fu, Chuntao Jiang, Yukun Zhou, “<a href="huangfangting-IPDPS-2016.pdf">Security RBSG: Protecting Phrase Change Memory with Security-Level Adjustable Dynamic Mapping</a>”,  in Proceedings of the 30th IEEE International Parallel &amp; 
-      Distributed Processing Symposium (<strong>IPDPS’16</strong>), Chicago, Illinois, USA, May 23-27, 2016, pages: 1081-1090.  (Acceptance rate: 23%)</li>
        <li><strong>Wen Xia</strong>, Chunguang Li, Hong Jiang, Dan Feng, Yu Hua, Leihua Qin, and Yucheng Zhang, "<em><a href="https://www.usenix.org/conference/hotstorage15/workshop-program/presentation/xia">Edelta: A Word-Enlarging Based Fast Delta Compression Approach</a></em>",  in Proceedings of the  7th USENIX Workshop on Hot Topics in Storage and File Systems (<strong>HotStorage'15</strong>), Santa Clara, CA, USA, July 6-7, 2015, pages 1-5. (Acceptance rate: 30%)</li>
     <li>Yukun Zhou, Dan Feng, <strong>Wen Xia</strong>, Min Fu, Fangting Huang, Yucheng Zhang, and Chunguang Li, "<a href="SecDep-final-2015.pdf"><em>SecDep: A User-Aware Efficient Fine-Grained Secure Deduplication Scheme with Multi-Level Key Management</em>"</a>, in Proceedings of the 31st International Conference on Massive Storage Systems and Technology <strong>(MSST'15</strong>), Santa Clara, CA, USA, June 2-5, 2015, pages 1-14.  (Acceptance rate: 23%)</li>
     <li><strong>Wen Xia</strong>, Hong Jiang, Dan Feng, and Yu Hua, "<em><a href="pub/SiLo-IEEE-Final-2015.pdf">Similarity and Locality based Indexing for High Performance Data Deduplication</a></em>", IEEE Transactions on Computers (<strong>TC</strong>), Vol.64, No.4, April 2015, pages: 1162-1176.</li>
@@ -112,7 +110,7 @@
   <ul>
 	  
     <li>Computer Systems (CSAPP), 2020. </li>  
-    <li>Operating Systems, 2019. </li>
+    <li>Operating Systems, 2019, 2020. </li>
     <li>Data Storage and Management in Internet of Things, 2016. </li>
     <li>Data Storage and Management in Internet of Things, 2015. </li>
     <li><em>Operating Systems Design and Analysis</em>, 2015.</li>
