--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <li>Pengfei Zuo, Yu Hua, Xue Liu, Dan Feng, <strong>Wen Xia</strong>, Shunde Cao, Jie Wu, Yuanyuan Sun, Yuncheng Guo, &quot;<a href="https://cswxia.github.io/">BEES: Bandwidth- and Energy- Efficient Image Sharing for Real-time Situation Awareness</a>&quot;, in Proceedings of the 37th International Conference on Distributed Computing Systems (<strong>ICDCS'17</strong>), Atlanta, GA, USA, June, 2017, pages: 1510-1520.</li>
     <li>Yucheng Zhang, Dan Feng, Hong Jiang, <strong>Wen Xia</strong>, Min Fu, Fangting Huang, Yukun Zhou, &quot;<a href="http://ieeexplore.ieee.org/document/7524782/keywords">A Fast Asymmetric Extremum Content Defined Chunking Algorithm for Data Deduplication in Backup Storage Systems</a>&quot;, IEEE Transactions on Computers (<strong>TC</strong>), Vol. 66, No. 2, pp. 199 - 211,  2017.</li>
     <li><strong>Wen Xia</strong>, Hong Jiang, Dan Feng, Fred Douglis, Philip Shilane, Yu Hua, Min Fu, Yucheng Zhang, and Yukun Zhou, &quot;<a href="survey-final-2016.pdf">A Comprehensive Study of the Past, Present, and Future of Data Deduplication</a>, &quot; in Proceedings of the IEEE (<strong>PIEEE</strong>), Vol. 104, No. 9, Sep. 2016, pages: 1681-1710.</li>
-    <li><strong>Wen Xia</strong>, Yukun Zhou, Hong Jiang, Dan Feng, Yu Hua, Yuchong Hu, Yucheng Zhang, Qing Liu, "<a href="https://www.usenix.org/system/files/conference/atc16/atc16-paper-xia.pdf">FastCDC: a Fast and Efficient Content-Defined Chunking Approach for Data Deduplication</a>",<strong>&nbsp;</strong> in Proceedings of USENIX Annual Technical Conference (<strong>USENIX ATC'16</strong>), Denver, CO, USA, June &nbsp;22–24, 2016, pages: 101-114. (Acceptance rate:18%, used by <a href="https://github.com/coblo">Content Blockchain Project</a>, and the chunking source code is <a href="https://github.com/coblo/pyiscclib/blob/master/src/iscclib/chunker.py">here</a>)</li>
+    <li><strong>Wen Xia</strong>, Yukun Zhou, Hong Jiang, Dan Feng, Yu Hua, Yuchong Hu, Yucheng Zhang, Qing Liu, "<a href="https://www.usenix.org/system/files/conference/atc16/atc16-paper-xia.pdf">FastCDC: a Fast and Efficient Content-Defined Chunking Approach for Data Deduplication</a>",<strong>&nbsp;</strong> in Proceedings of USENIX Annual Technical Conference (<strong>USENIX ATC'16</strong>), Denver, CO, USA, June &nbsp;22–24, 2016, pages: 101-114. (Acceptance rate:18%,  the FastCDC source code is <a href="https://github.com/wxiacode/FastCDC-c">here</a>)</li>
     <li><strong>Wen Xia</strong>, Hong Jiang, Dan Feng, and Lei Tian, "<em><a href="pub/DARE-IEEE-Final-2016.pdf">DARE: A Deduplication-Aware Resemblance Detection and Elimination Scheme for Data Reduction with Low Overheads</a></em>",  IEEE Transactions on Computers (<strong>TC</strong>), Vol.65, No.6, June  2016, pages: 1692 - 1705. </li>
        <li><strong>Wen Xia</strong>, Chunguang Li, Hong Jiang, Dan Feng, Yu Hua, Leihua Qin, and Yucheng Zhang, "<em><a href="https://www.usenix.org/conference/hotstorage15/workshop-program/presentation/xia">Edelta: A Word-Enlarging Based Fast Delta Compression Approach</a></em>",  in Proceedings of the  7th USENIX Workshop on Hot Topics in Storage and File Systems (<strong>HotStorage'15</strong>), Santa Clara, CA, USA, July 6-7, 2015, pages 1-5. (Acceptance rate: 30%)</li>
     <li>Yukun Zhou, Dan Feng, <strong>Wen Xia</strong>, Min Fu, Fangting Huang, Yucheng Zhang, and Chunguang Li, "<a href="SecDep-final-2015.pdf"><em>SecDep: A User-Aware Efficient Fine-Grained Secure Deduplication Scheme with Multi-Level Key Management</em>"</a>, in Proceedings of the 31st International Conference on Massive Storage Systems and Technology <strong>(MSST'15</strong>), Santa Clara, CA, USA, June 2-5, 2015, pages 1-14.  (Acceptance rate: 23%)</li>
@@ -82,12 +82,12 @@
     <li>
       <p align="left">2009.09-2014.06. <strong>Ph.D. in Computer Science</strong>,<br />
           <a href="http://www.hust.edu.cn/">Huazhong University of Science and Technology</a> (HUST), Wuhan,  China. <br />
-        Advisor: Prof. <a href="http://stlab.wnlo.hust.edu.cn/html/zhuren.html">Dan Feng</a>.</p>
+        Advisor: Prof. <a href="http://stlab.wnlo.hust.edu.cn/dy.jsp?urltype=tree.TreeTempUrl&wbtreeid=1004">Dan Feng</a>.</p>
     </li>
     <li>
       <p align="left">2008.09-2009.08. <strong>M.S.  candidate in Computer Science</strong>, <br />
           <a href="http://www.hust.edu.cn/">Huazhong University of Science and Technology</a> (HUST), Wuhan,  China. <br />
-        Advisor: Prof. <a href="http://stlab.wnlo.hust.edu.cn/csyhua/">Yu Hua</a>.</p>
+        Advisor: Prof. <a href="https://csyhua.github.io/csyhua/index.html">Yu Hua</a>.</p>
     </li>
     <li>
       <p align="left">2004.09-2008.06. <strong>B.S.  in Computer Science</strong>, <br />
