--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <table width="980" border="0" bordercolor="#FFFFFF">
     <tbody><tr>
       <td width="336" rowspan="3"><img src="index_files/xiawen-2021.jpg" alt="wen" width="281" height="287"></td>
-      <td height="235" colspan="4"><p><span class="STYLE4">Wen Xia</span><span class="STYLE8">,</span> <span class="STYLE7">Ph.D., </span>Associate Professor </p>                
+      <td height="235" colspan="4"><p><span class="STYLE4">Wen Xia</span><span class="STYLE8">,</span> <span class="STYLE7">Ph.D., </span>Professor </p>                
         <p><a href="http://cs.hitsz.edu.cn">School of Computer Science and Technology</a><br>
           <a href="http://www.hitsz.edu.cn/index.html">Harbin Institute of Technology, Shenzhen         </a></p>
         <p>Office: HIT Campus of University Town of Shenzhen, Shenzhen, China <br>
@@ -46,11 +46,11 @@
     </tr>
   </tbody></table>
   <p>Wen Xia received his Ph.D. degree in Computer Science from Huazhong University
-    of Science and Technology (advised by Professor <a href="http://stlab.wnlo.hust.edu.cn/dy.jsp?urltype=tree.TreeTempUrl&amp;wbtreeid=1004">Dan Feng</a>) in June, 2014. He is  currently an associate professor at School of Computer Science and Technology, Harbin Institute of Technology, Shenzhen. His 
+    of Science and Technology (advised by Professor <a href="http://stlab.wnlo.hust.edu.cn/dy.jsp?urltype=tree.TreeTempUrl&amp;wbtreeid=1004">Dan Feng</a>) in June, 2014. He is  currently a  professor at the School of Computer Science and Technology, Harbin Institute of Technology, Shenzhen. His 
      research interests include data deduplication, 
     data compression, 
-      storage systems, and cloud storage. He publishes over 40 papers in major journals and  
-  conferences  including Proceedings of the IEEE (PIEEE), IEEE Transactions on Computers (TC),  IEEE Transactions on Parallel and Distributed Systems (TPDS), USENIX ATC,  FAST,  INFOCOM,  MSST,  Performance, IPDPS, HotStorage, etc. He is a member of ACM, CCF,  IEEE, and USENIX.</p>
+      storage systems, and cloud storage. He publishes over 70 papers in major journals and  
+  conferences  including Proceedings of the IEEE (PIEEE), IEEE Transactions on Computers (TC),  IEEE Transactions on Parallel and Distributed Systems (TPDS), FAST, USENIX ATC,   INFOCOM,  MSST,  Performance, IPDPS, HotStorage, etc. He is a member of ACM, CCF,  IEEE, and USENIX.</p>
   <p class="STYLE11">Selected Publications<a name="SelectedPublications" id="SelectedPublications"></a> (<a href="https://scholar.google.com.hk/citations?user=TRmOudAAAAAJ&amp;hl=zh-CN&amp;oi=sra">Google Scholar</a>, <a href="http://dblp.uni-trier.de/pers/hd/x/Xia:Wen">DBLP</a>):</p>
   <ol>
 	    <li>Xiangyu Zou, <strong>Wen Xia*</strong>, Philip Shilane, Haijun Zhang, and Xuan Wang, &quot;<a href="https://www.usenix.org/conference/atc22/">Building a High-performance Fine-grained Deduplication Framework for Backup Storage with High Deduplication Ratio.</a>&quot;, Proceedings of the 2022 USENIX Annual Technical Conference  (<strong>USENIX ATC'22</strong>), Carlsbad, CA, USA, Jul. 2022. (Acceptance rate: 16%)</li>
