--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </tr>
   </tbody></table>
   <p>Wen Xia received his Ph.D. degree in Computer Science from Huazhong University
-    of Science and Technology (advised by Professor <a href="http://stlab.wnlo.hust.edu.cn/dy.jsp?urltype=tree.TreeTempUrl&amp;wbtreeid=1004">Dan Feng</a>) in June, 2014. He is  currently a  professor at the School of Computer Science and Technology, Harbin Institute of Technology, Shenzhen. His 
+    of Science and Technology in June 2014. He is now a  professor at the School of Computer Science and Technology, Harbin Institute of Technology, Shenzhen. His 
      research interests include data deduplication, 
     data compression, 
       storage systems, and cloud storage. He publishes over 70 papers in major journals and  
