--- a/src/prof_service.html
+++ b/src/prof_service.html
@@ -4,14 +4,15 @@
 </p>
 
 <ul>
+
     <li>
         <p>
-            Conference Reviewer: MSST, SC, MASCOTS, CCGrid, DISCS, NAS, etc.
+           Program Committee Member: FAST, EuroSys, HotStorage, NAS etc.
         </p>
     </li>
     <li>
         <p>
-            Journal Reviewer: ACM TOS, IEEE TPDS, IEEE TKDE, AJCE, JCST, FCS, etc.
+            Journal Reviewer: IEEE TC/TPDS/TKDE/TDSC/TCAD, ACM TOS/TACO, etc.
         </p>
     </li>
 </ul>
