--- a/src/prof_service.html
+++ b/src/prof_service.html
@@ -7,7 +7,7 @@
 
     <li>
         <p>
-           Program Committee Member: FAST, EuroSys, HotStorage, NAS etc.
+           Program Committee Member: FAST'24, EuroSys'24, HotStorage'21, etc.
         </p>
     </li>
     <li>
