--- a/src/brief_intro.html
+++ b/src/brief_intro.html
@@ -69,5 +69,5 @@
     Shenzhen. His research interests include data deduplication, data compression, storage systems, and cloud storage.
     He publishes over 70 papers in major journals and conferences including Proceedings of the IEEE (PIEEE), IEEE
     Transactions on Computers (TC), IEEE Transactions on Parallel and Distributed Systems (TPDS), FAST, USENIX ATC,
-    INFOCOM, MSST, Performance, IPDPS, HotStorage, etc. He is a member of ACM, CCF, IEEE, and USENIX.
+    ICDE, INFOCOM, DAC, MSST, HotStorage, etc. He is a member of ACM, CCF, IEEE, and USENIX.
 </p>
