--- a/src/brief_intro.html
+++ b/src/brief_intro.html
@@ -29,7 +29,7 @@
             </td>
 
             <td idx="team">
-                <a href="#Team" class="INDEX_ITEM">Team</a>
+                <a href="#Teams" class="INDEX_ITEM">Team</a>
             </td>
 
             <td idx="teaching">
