--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="FONT-TIMES-NEW-ROMAN">
+<body class="FONT-ARIAL">
   <div class="CONTAINER">
     <div id="WenXiaBreifIntro" import="src/brief_intro.html"></div>
     <div id="WenXiaSelectedPublications" import="src/selected_pub.html"></div>
