--- a/src/selected_pub.html
+++ b/src/selected_pub.html
@@ -4,7 +4,7 @@
     <a name="SelectedPublications" id="SelectedPublications"></a>
 </p>
 
-<ol id="PubList">
-</ol>
+<ul id="PubList">
+</ul>
 
 <script src="../scripts/selected_pub.js"></script>
