--- a/src/brief_intro.html
+++ b/src/brief_intro.html
@@ -64,10 +64,10 @@
 </script>
 
 <p>
-    Wen Xia received his Ph.D. degree in Computer Science from Huazhong University of Science and Technology in June
-    2014. He is now a professor at the School of Computer Science and Technology, Harbin Institute of Technology,
-    Shenzhen. His research interests include data deduplication, data compression, storage systems, and cloud storage.
-    He publishes over 70 papers in major journals and conferences including Proceedings of the IEEE (PIEEE), IEEE
+    Wen Xia  is now a professor at the School of Computer Science and Technology, Harbin Institute of Technology,
+    Shenzhen. He received his Ph.D. degree in Computer Science from Huazhong University of Science and Technology in June
+    2014. His research interests include data deduplication, data compression, storage systems, and cloud storage.
+    He publishes over 80 papers in major journals and conferences including Proceedings of the IEEE (PIEEE), IEEE
     Transactions on Computers (TC), IEEE Transactions on Parallel and Distributed Systems (TPDS), FAST, USENIX ATC,
     ICDE, INFOCOM, DAC, MSST, HotStorage, etc. He is a member of ACM, CCF, IEEE, and USENIX.
 </p>
