--- a/src/selected_pub.html
+++ b/src/selected_pub.html
@@ -1,4 +1,4 @@
-<p class="SECTION-HEADER">Selected Publications (<a
+<p class="SECTION-HEADER">Selected Pubs (<a
         href="https://scholar.google.com.hk/citations?user=TRmOudAAAAAJ&amp;hl=zh-CN&amp;oi=sra">Google Scholar</a>, <a
         href="http://dblp.uni-trier.de/pers/hd/x/Xia:Wen">DBLP</a>):
     <a name="SelectedPublications" id="SelectedPublications"></a>
