--- a/src/brief_intro.html
+++ b/src/brief_intro.html
@@ -32,11 +32,13 @@
 </div>
 
 <p>
-    Wen Xia is now a professor at the School of Computer Science and Technology, Harbin Institute of Technology,
+    Wen Xia is a professor at the School of Computer Science and Technology, Harbin Institute of Technology,
     Shenzhen. He received his Ph.D. degree in Computer Science from Huazhong University of Science and Technology in
-    June
-    2014. His research interests include data deduplication, data compression, storage systems, and cloud storage.
+    June 2014. He was a visiting scholar at University of Nebraska, USA, and a research assistant at NEC American Labs, in 2011-2013. 
+    His research interests include data deduplication, data compression, storage systems, and cloud storage. 
     He publishes over 80 papers in major journals and conferences including Proceedings of the IEEE (PIEEE), IEEE
     Transactions on Computers (TC), IEEE Transactions on Parallel and Distributed Systems (TPDS), FAST, USENIX ATC,
-    ICDE, INFOCOM, DAC, MSST, HotStorage, etc. He is a member of ACM, CCF, IEEE, and USENIX.
+    ICDE, INFOCOM, DAC, MSST, HotStorage, etc. 
+    He serves as PC Member of several Systems conferences such as FAST, EuroSys, HotStorage, etc.
+    He is a member of ACM, CCF, IEEE, and USENIX.
 </p>
