--- a/src/prof_service.html
+++ b/src/prof_service.html
@@ -1,5 +1,5 @@
 <p class="SECTION-HEADER">
-    Professional Services
+    Recent Professional Services
     <a name="ProfessionalServices" id="ProfessionalServices"></a>
 </p>
 
@@ -13,6 +13,12 @@
     <li>
         <p>
             Journal Reviewer: IEEE TC/TPDS/TKDE/TDSC/TCAD, ACM TOS/TACO, etc.
+        </p>
+    </li>
+
+    <li>
+        <p>
+    Conference Organization: Posters and Demos Chairs of ICPE'22, PC Chairs of ChinaSys'21.
         </p>
     </li>
 </ul>
