--- a/src/prof_service.html
+++ b/src/prof_service.html
@@ -18,7 +18,7 @@
 
     <li>
         <p>
-    Conference Organization: Posters and Demos Chairs of ICPE'22, PC Chairs of ChinaSys'21.
+    Conference Organization: PC Chairs of ChinaSys'21, Posters and Demos Chairs of ICPE'22.
         </p>
     </li>
 </ul>
