--- a/src/brief_intro.html
+++ b/src/brief_intro.html
@@ -37,8 +37,8 @@
     June 2014. He was a visiting scholar at University of Nebraska, USA, and a research assistant at NEC American Labs, in 2011-2013. 
     His research interests include data deduplication, data compression, storage systems, and cloud storage. 
     He publishes over 80 papers in major journals and conferences including Proceedings of the IEEE (PIEEE), IEEE
-    Transactions on Computers (TC), IEEE Transactions on Parallel and Distributed Systems (TPDS), FAST, USENIX ATC,
-    ICDE, INFOCOM, DAC, MSST, HotStorage, etc. 
+    Transactions on Computers (TC), IEEE Transactions on Parallel and Distributed Systems (TPDS), FAST, USENIX ATC, DAC, 
+    ICDE, MSST, HotStorage, etc. 
     He serves as PC Member of several Systems conferences such as FAST, EuroSys, HotStorage, etc.
     He is a member of ACM, CCF, IEEE, and USENIX.
 </p>
