--- a/src/awards.html
+++ b/src/awards.html
@@ -4,7 +4,9 @@
 </p>
 
 <ul>
-
+ <li>
+<p> The Second Class Award in Science and Technology Progress in the Guangdong Province, 2024.</p> 
+    </li>
     
     <li>
 <p> Advisor Award for ACM ChinaSys Outstanding Doctoral Dissertation Award, 2023. </p> 
