--- a/src/brief_intro.html
+++ b/src/brief_intro.html
@@ -34,8 +34,8 @@
 <p>
     Wen Xia is a professor at the School of Computer Science and Technology, Harbin Institute of Technology,
     Shenzhen. He received his Ph.D. degree in Computer Science from Huazhong University of Science and Technology in
-    June 2014. He was a visiting scholar at University of Nebraska, USA, and a research assistant at NEC American Labs, in 2011-2013. 
-    His research interests include data deduplication, data compression, storage systems, and cloud storage. 
+    June 2014. He was a visiting scholar at the University of Nebraska, USA, and a research assistant at NEC American Labs, in 2011-2013. 
+    His research interests include data deduplication, data compression, storage systems, operating systems, and cloud storage. 
     He publishes over 80 papers in major journals and conferences including Proceedings of the IEEE (PIEEE), IEEE
     Transactions on Computers (TC), IEEE Transactions on Parallel and Distributed Systems (TPDS), FAST, USENIX ATC, DAC, 
     ICDE, MSST, HotStorage, etc. 
