--- a/src/grants.html
+++ b/src/grants.html
@@ -1,5 +1,12 @@
 <p class="SECTION-HEADER"><strong><strong><a name="Grants" id="Grants"></a></strong>Projects</strong></p>
 <ul>
+     <li>
+        <p>National Natural Science Foundation of China (NSFC), No. 62472127, 2025- 2029 (PI).</p>
+    </li>
+     <li>
+        <p>National Natural Science Foundation of China (NSFC), No. 61972441, 2020- 2023 (PI).</p>
+    </li>
+    
     <li>
         <p>National Natural Science Foundation of China (NSFC), No. 61502190, 2016- 2018 (PI).</p>
     </li>
