--- a/src/prof_service.html
+++ b/src/prof_service.html
@@ -7,7 +7,7 @@
 
     <li>
         <p>
-           Program Committee Member: FAST'24, EuroSys'24, HotStorage'21, etc.
+           Program Committee Member: FAST'26, HotStorage'25，FAST'24, EuroSys'24, HotStorage'21, etc.
         </p>
     </li>
     <li>
@@ -18,7 +18,12 @@
 
     <li>
         <p>
-    Conference Organization: PC Chairs of ChinaSys'21, Posters and Demos Chairs of ICPE'22.
+           Associate Editor, Tsinghua Science and Technology.
+        </p>
+    </li>
+    <li>
+        <p>
+    Conference Organization: PC Chairs of NAS'24 (Architecture Track), PC Chairs of ChinaSys'21, Posters and Demos Chairs of ICPE'22.
         </p>
     </li>
 </ul>
