--- a/src/awards.html
+++ b/src/awards.html
@@ -4,6 +4,11 @@
 </p>
 
 <ul>
+    
+ <li>
+<p> USENIX FAST Distinguished Artifacts Award, 2025.</p> 
+    </li>
+    
  <li>
 <p> The Second Class Award in Science and Technology Progress in the Guangdong Province, 2024.</p> 
     </li>
