--- a/src/brief_intro.html
+++ b/src/brief_intro.html
@@ -36,9 +36,7 @@
     Shenzhen. He received his Ph.D. degree in Computer Science from Huazhong University of Science and Technology in
     June 2014. He was a visiting scholar at the University of Nebraska, USA, and a research assistant at NEC American Labs, in 2011-2013. 
     His research interests include data deduplication, data compression, storage systems, operating systems, and cloud storage. 
-    He has published over 80 papers in major journals and conferences, including Proceedings of the IEEE (PIEEE), IEEE
-    Transactions on Computers (TC), IEEE Transactions on Parallel and Distributed Systems (TPDS), FAST, ASPLOS, USENIX ATC, EuroSys, DAC, 
-    ICDE, MSST, HotStorage, etc. 
+     His papers have been published in major conferences and journals, including FAST, ASPLOS, USENIX ATC, EuroSys, ICDE, etc. 
     He received the USENIX FAST Distinguished Artifact Award in 2025, the ACM SIGOPS China Outstanding Doctoral Dissertation Award (Advisor) in 2023,  the ACM SIGOPS China Rising Star Award, and the ACM TOS Distinguished Reviewer  Award in 2021.
     He serves as PC Member of several Systems conferences such as FAST, EuroSys, HotStorage, etc.
     He is a member of ACM, CCF, IEEE, and USENIX.
