--- a/src/brief_intro.html
+++ b/src/brief_intro.html
@@ -36,8 +36,8 @@
     Shenzhen. He received his Ph.D. degree in Computer Science from Huazhong University of Science and Technology in
     June 2014. He was a visiting scholar at the University of Nebraska, USA, and a research assistant at NEC American Labs, in 2011-2013. 
     His research interests include data deduplication, data compression, storage systems, operating systems, and cloud storage. 
-     His papers have been published in major conferences and journals, including FAST, ASPLOS, USENIX ATC, EuroSys, ICDE, etc. 
-    He received the USENIX FAST Distinguished Artifact Award in 2025, the ACM SIGOPS China Outstanding Doctoral Dissertation Award (Advisor) in 2023,  the ACM SIGOPS China Rising Star Award, and the ACM TOS Distinguished Reviewer  Award in 2021.
+     His papers have been published in major conferences and journals, including OSDI, FAST, ASPLOS, USENIX ATC, EuroSys, ICDE, etc. 
+    He received the USENIX FAST Distinguished Artifact Award in 2025, the ACM SIGOPS China Outstanding Doctoral Dissertation Award (Advisor) in 2023,  the ACM SIGOPS China Rising Star Award, and the ACM TOS Distinguished Reviewer Award in 2021.
     He serves as PC Member of several Systems conferences such as FAST, EuroSys, HotStorage, etc.
     He is a member of ACM, CCF, IEEE, and USENIX.
 </p>
