--- a/src/brief_intro.html
+++ b/src/brief_intro.html
@@ -9,7 +9,7 @@
             <p>
                 <a href="http://cs.hitsz.edu.cn">School of Computer Science and Technology</a>
                 <br>
-                <a href="http://www.hitsz.edu.cn/index.html">Harbin Institute of Technology, Shenzhen </a>
+                <a href="http://www.hitsz.edu.cn">Harbin Institute of Technology, Shenzhen </a>
             </p>
             <p>Office: HIT Campus of University Town of Shenzhen, Shenzhen, China <br>
                 Email: xiawen (AT) hit.edu.cn or wx.hust (AT) gmail.com </p>
